# contemplative-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt  app.cpp
application/include/: Application.hpp
application/res/models/astrovan2/: scene.gltf
application/res/models/balloon/: scene.gltf
application/res/models/gem1/: scene.gltf
application/res/models/gem2/: scene.gltf
application/res/models/gem3/: scene.gltf
application/res/models/gem4/: scene.gltf
application/res/models/island1/: scene.gltf
application/res/models/island2/: scene.gltf
application/res/models/island3/: scene.gltf
application/res/models/island4/: scene.gltf
application/res/models/island5/: scene.gltf
application/res/models/rock1/: scene.gltf
application/res/models/rock2/: scene.gltf
application/res/models/rock3/: scene.gltf
application/res/models/rock4/: scene.gltf
application/res/models/rock5/: scene.gltf
application/res/models/rock6/: scene.gltf
application/res/models/rock7/: scene.gltf
application/res/models/spaceship/: scene.gltf
application/res/shaders/: directionallight.frag  forward.vert  particle.frag  particle.vert  pbr_directionallight.frag  pointlight.frag  skybox.frag  skybox.vert  text.frag  text.vert
application/scenes/: scene.json
application/src/: Application.cpp
doc/html/: AudioBuffer_8hpp_source.html  AudioDevice_8hpp_source.html  AudioListener_8hpp_source.html  AudioSource_8hpp_source.html  Camera_8hpp_source.html  Collectable_8hpp_source.html  Collider_8hpp_source.html  CubeMap_8hpp_source.html  DirectionalLight_8hpp_source.html  ElementBufferObject_8hpp_source.html  EngineException_8hpp_source.html  Entity_8hpp_source.html  FilePath_8hpp_source.html  GLApplication_8hpp_source.html  GLAudioManager_8hpp_source.html  GLError_8hpp_source.html  GLFWManager_8hpp_source.html  GLWindowManager_8hpp_source.html  GLWindowUtils_8hpp_source.html  InputManager_8hpp_source.html  Model_8hpp_source.html  Obstacle_8hpp_source.html  OpenALManager_8hpp_source.html  ParticleSystem_8hpp_source.html  Player_8hpp_source.html  PointLight_8hpp_source.html  Random_8hpp_source.html  Renderer_8hpp_source.html  ResourceManager_8hpp_source.html  Scene_8hpp_source.html  Serializer_8hpp_source.html  Shader_8hpp_source.html  Shape_8hpp_source.html  Sphere_8hpp_source.html  Texture_8hpp_source.html  TimeManager_8hpp_source.html  TrackballCamera_8hpp_source.html  UI_8hpp_source.html  VertexArrayObject_8hpp_source.html  VertexBufferObject_8hpp_source.html  (+253 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  (+62 more)
engine/: CMakeLists.txt
engine/doc/: CMakeLists.txt  Doxyfile.in
engine/include/engine/: AudioBuffer.hpp  AudioDevice.hpp  AudioFile.h  AudioListener.hpp  AudioSource.hpp  Camera.hpp  Collectable.hpp  Collider.hpp  Container.hpp  CubeMap.hpp  DirectionalLight.hpp  ElementBufferObject.hpp  EngineException.hpp  Entity.hpp  FilePath.hpp  GLApplication.hpp  GLAudioManager.hpp  GLError.hpp  GLFWManager.hpp  GLWindowManager.hpp  GLWindowUtils.hpp  InputManager.hpp  Iterator.hpp  Model.hpp  Obstacle.hpp  OpenALManager.hpp  ParticleSystem.hpp  Player.hpp  PointLight.hpp  Random.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  Serializer.hpp  Shader.hpp  Shape.hpp  Sphere.hpp  Texture.hpp  TimeManager.hpp  TrackballCamera.hpp  (+3 more)
engine/include/engine/dependencies/: glm.hpp  json.hpp  stb_image_write.h  tiny_gltf.h
engine/include/engine/utils/: common.hpp  cout_colors.hpp  filesystem.hpp  gl_debug_output.hpp  gltf.hpp
engine/src/: AudioBuffer.cpp  AudioDevice.cpp  AudioListener.cpp  AudioSource.cpp  Collectable.cpp  Collider.cpp  CubeMap.cpp  DirectionalLight.cpp  ElementBufferObject.cpp  EngineException.cpp  Entity.cpp  FilePath.cpp  GLApplication.cpp  GLError.cpp  GLFWManager.cpp  GLWindowUtils.cpp  InputManager.cpp  Model.cpp  Obstacle.cpp  OpenALManager.cpp  ParticleSystem.cpp  Player.cpp  PointLight.cpp  Random.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  Serializer.cpp  Shader.cpp  Sphere.cpp  Texture.cpp  TimeManager.cpp  TrackballCamera.cpp  UI.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
engine/src/utils/: gl_debug_output.cpp  gltf.cpp  gltf_implementation.cpp
